modules/wycs/tests/invalid/test_060.wyal
define NatSet({int} xs) as:
  forall(int x):
    x in xs ==> x >= 0

define PosSet({int} xs) as:
  forall(int x):
    x in xs ==> x > 0

assert:
   forall ({int} xs):
       NatSet(xs) ==> PosSet(xs)